Prevent sticky hover on iOS

--- a/src/components/LocationListItem.css
+++ b/src/components/LocationListItem.css
@@ -4,8 +4,10 @@
   padding: .8rem;
 }
 
-.location-list-item:hover {
-  background-color: #eee;
+@media (hover: hover) {
+  .location-list-item:hover {
+    background-color: #eee;
+  }
 }
 
 .location-list-item:last-child {
